tests/e2e/macros/user_inline/snapshots/e2e__macros__user_inline__repetition_expr_macro.snap
---
source: tests/e2e/macros/user_inline/mod.rs
description: "// → test_package/Scarb.toml\n[package]\nname = \"test_package\"\nversion = \"0.1.0\"\nedition = \"2025_12\"\nexperimental-features = [\"user_defined_inline_macros\"]\n\n// → test_package/src/a.cairo\nuse test_package::build_array;\n\nfn foo() {\n    let _full = build_array!(1, 2, 3);\n    let _empty: Array<felt252> = build_array!();\n}\n\n// → test_package/src/lib.cairo\nmod a;\n\nmacro add_one {\n    ($x:expr) => {\n        $x + 1\n    };\n}\n\nmacro add_many {\n    ($x:expr, $y:expr) => {\n        $x + $y\n    };\n    ($x:expr, $y:expr, $z:expr) => {\n        $x + $y + $z\n    };\n}\n\nmacro build_array {\n    ($($x:expr), *) => {\n        {\n            let mut result = $defsite::ArrayTrait::new();\n            $(result.append($x);)*\n            result\n        }\n    };\n}\n\nmacro declare_two {\n    ($x:expr) => {\n        let first = $x;\n        let _second = first + 1;\n    };\n}\n\nmacro append_twice {\n    ($arr:ident, $value:expr) => {\n        $arr.append($value);\n        $arr.append($value + 1);\n    };\n}"
expression: report
---
[[expansions]]
analyzed_lines = """
    let _full = build_arr<caret>ay!(1, 2, 3);
"""
generated_code = """
{
    let mut result = $defsite::ArrayTrait::new();
    result.append(1);
    result.append(2);
    result.append(3);
    result
}
"""

[[expansions]]
analyzed_lines = """
    let _empty: Array<felt252> = build_arr<caret>ay!();
"""
generated_code = """
{
    let mut result = $defsite::ArrayTrait::new();
    result
}
"""
