tests/e2e/macros/user_inline/snapshots/e2e__macros__user_inline__statement_macros.snap
---
source: tests/e2e/macros/user_inline/mod.rs
assertion_line: 65
description: "// → test_package/Scarb.toml\n[package]\nname = \"test_package\"\nversion = \"0.1.0\"\nedition = \"2025_12\"\nexperimental-features = [\"user_defined_inline_macros\"]\n\n// → test_package/src/a.cairo\nuse test_package::{append_twice, declare_two};\n\nfn foo() {\n    declare_two!(10);\n    let mut data: Array<felt252> = ArrayTrait::new();\n    append_twice!(data, 1);\n}\n\n// → test_package/src/lib.cairo\nmod a;\n\nmacro add_one {\n    ($x:expr) => {\n        $x + 1\n    };\n}\n\nmacro add_many {\n    ($x:expr, $y:expr) => {\n        $x + $y\n    };\n    ($x:expr, $y:expr, $z:expr) => {\n        $x + $y + $z\n    };\n}\n\nmacro build_array {\n    ($($x:expr), *) => {\n        {\n            let mut result = $defsite::ArrayTrait::new();\n            $(result.append($x);)*\n            result\n        }\n    };\n}\n\nmacro declare_two {\n    ($x:expr) => {\n        let first = $x;\n        let _second = first + 1;\n    };\n}\n\nmacro append_twice {\n    ($arr:ident, $value:expr) => {\n        $arr.append($value);\n        $arr.append($value + 1);\n    };\n}"
expression: report
---
[[expansions]]
analyzed_lines = """
    declare_t<caret>wo!(10);
"""
generated_code = """
let first = 10;
let _second = first + 1;
"""

[[expansions]]
analyzed_lines = """
    append_t<caret>wice!(data, 1);
"""
generated_code = """
data.append(1);
data.append(1 + 1);
"""
